re-enabled coLearning Teacher polling and removed loading gif background css from inline images to prevent them being visible with transparent images

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5751,12 +5751,12 @@ input.datepicker {
     background-image: none;
 }
 
-#co-learning-teacher-page img {
-    background-color: rgba(var(--light-grey-rgb), 1);
-    background-image: url(/pdf/images/loading-icon.gif);
-    background-position: center;
-    background-repeat: no-repeat;
-}
+/*#co-learning-teacher-page img {*/
+/*    background-color: rgba(var(--light-grey-rgb), 1);*/
+/*    background-image: url(/pdf/images/loading-icon.gif);*/
+/*    background-position: center;*/
+/*    background-repeat: no-repeat;*/
+/*}*/
 
 #co-learning-teacher-page .drawer-footer,
 #assessment-page .drawer-footer {
